--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Magicbooks</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <%= render :partial => '/layouts/setup' %>
+  </head>
 
-<%= yield %>
+  <body>
 
-</body>
+    <%= render :partial => '/layouts/nav' %>
+
+  </body>
 </html>
