--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,8 @@ body {
   font-weight: normal;
   line-height: 20px;
   color: #333;
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
 
 /* background-color: #F8F8F8;
@@ -28,4 +30,20 @@ li {
   font-size: 16px;
   font-weight: normal;
   line-height: 20px;
+}
+
+#splash {
+  background-color: #ECECEC;
+  height: 400px;
+  border-bottom: 1px solid #DADADA;
+  text-align: center;
+}
+
+h1 {
+  color: #454545;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: bold;
+  margin: 30px 0 10px 0;
 }
