--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,6 +2,8 @@
   <div class="navbar-inner">
     <div class="container">
       <a class="brand" href="#">MagicBooks</a>
+      <a class="btn btn-primary" href="#contact">Login</a>
+
       <ul class="nav pull-right">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#about">Tour</a></li>
