--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -9,7 +9,9 @@
     <%= render :partial => '/layouts/nav' %>
 
     <div id="splash">
-      test
+      <div class="container">
+        <h1>Create Your Own Children's Books</h1>
+      </div>
     </div>
 
   </body>
