--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -14,5 +14,20 @@
       </div>
     </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="span9">
+          <h2>Artists compete to win your project.  You describe the pictures you need
+            illustrated and watch the magic!</h2>
+        </div>
+        <div class="span3">
+          <div id="welcome-signup">
+            <a href="#" class="btn btn-large btn-success">Sign Up for Free</a>
+            <p> No fees to get started! </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
