--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -27,6 +27,17 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div id="welcome-line">&nbsp;</div>
+      </div>
+      <div class="row">
+        <div class="span6">
+          wefwef
+        </div>
+        <div class="span6">
+          wewfe
+        </div>
+      </div>
     </div>
 
   </body>
