--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -30,12 +30,25 @@
       <div class="row">
         <div id="welcome-line">&nbsp;</div>
       </div>
-      <div class="row">
+      <div class="row" id="welcome-info">
         <div class="span6">
-          wefwef
+          <div class="row">
+            <div class="span1">
+              &nbsp;
+            </div>
+            <div class="span5">
+              <h3>Post Detailed Artwork Instructions</h3>
+              <p>
+              MagicBooks artists love what they do.  They have a burning desire to
+              express themselves through drawings</p>
+              <p>
+              Go ahead and describe exactly what you want drawn, they will make it happen!
+              </p>
+            </div>
+          </div>
         </div>
         <div class="span6">
-          wewfe
+          &nbsp;
         </div>
       </div>
     </div>
