--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,8 +57,15 @@ h2 {
   font-weight: bold;
 }
 
+h3 {
+  color: #333; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 18px; font-style: normal; font-weight: bold; line-height: 35px;
+}
+
 #welcome-signup { margin: 25px 0 0 20px; }
 #welcome-signup .btn-large { display: block; font-size: 18px; }
 #welcome-signup p { margin: 10px 0 0 0; text-align: center; color: #777; }
 
 #welcome-line { border-bottom: 1px solid #CECECE; margin: 10px 0 20px 0; }
+
+#welcome-info p { color: #454545; font-family: 'Droid Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 15px; font-style: normal; font-weight: normal; line-height: 20px;}
