--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,3 +69,4 @@ h3 {
 
 #welcome-info p { color: #454545; font-family: 'Droid Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 15px; font-style: normal; font-weight: normal; line-height: 20px;}
+#welcome-info img { margin: 10px 0 0 10px; } 
