--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -34,7 +34,7 @@
         <div class="span6">
           <div class="row">
             <div class="span1">
-              &nbsp;
+              <img src="/assets/art-icon.png"/>
             </div>
             <div class="span5">
               <h3>Post Detailed Artwork Instructions</h3>
@@ -43,6 +43,21 @@
               express themselves through drawings</p>
               <p>
               Go ahead and describe exactly what you want drawn, they will make it happen!
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span1">
+              <img src="/assets/document-icon.gif"/>
+            </div>
+            <div class="span5">
+              <h3>Multiple Artists Compete for You</h3>
+              <p>
+              Similar to popular logo creation sites, many different artists will give you
+              their take on your book.
+              </p>
+              <p>
+              If you don't like the first one, no problem, you'll have many choices.
               </p>
             </div>
           </div>
