--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -63,7 +63,14 @@
           </div>
         </div>
         <div class="span6">
-          &nbsp;
+          <div id="welcome-video">
+            <div id="welcome-video-img">
+              &nbsp;
+            </div>
+            <p>
+            Watch the 2-minute video explaining MagicBooks
+            </p>
+          </div>
         </div>
       </div>
     </div>
