--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -61,6 +61,48 @@
               </p>
             </div>
           </div>
+          <div class="row">
+            <div class="span1">
+              <img src="/assets/money-icon.png"/>
+            </div>
+            <div class="span5">
+              <h3>Sell Your Book on Amazon</h3>
+              <p>
+              If you have a hit book you can make money.  Not all books are hits, but you never know!
+              </p>
+              <p>
+              We make it simple to get your idea turned into a real product you can try and sell.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span1">
+              <img src="/assets/facebook.jpg"/>
+            </div>
+            <div class="span5">
+              <h3>Use Your Social Network</h3>
+              <p>
+              Our customers are amazed at how well social networking sites help promote their books.
+              </p>
+              <p>
+              Your friends and family will love reading your book to their kids!
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span1">
+              <img src="/assets/quality.gif"/>
+            </div>
+            <div class="span5">
+              <h3>Full Color Quality Printing</h3>
+              <p>
+              Children's Books are different from other books.  You need lots of printing options.
+              </p>
+              <p>
+              Quality Printing on thick cardboard paper, never-tear paper, and more.
+              </p>
+            </div>
+          </div>
         </div>
         <div class="span6">
           <div id="welcome-video">
