--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -113,6 +113,34 @@
             Watch the 2-minute video explaining MagicBooks
             </p>
           </div>
+          <div class="row">
+            <div class="span1">
+              <img src="/assets/legal.png"/>
+            </div>
+            <div class="span5">
+              <h3>Legal Profit Sharing Contracts</h3>
+              <p>
+              To attract the best artists you can offer to share the book's profits.
+              </p>
+              <p>
+              We offer the legal service to enter into these contracts with artists.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span1">
+              <img src="/assets/stats.gif"/>
+            </div>
+            <div class="span5">
+              <h3>Accurate Tracking of Stats</h3>
+              <p>
+              We keep a close eye on how well your books are doing!
+              </p>
+              <p>
+              Login to our site as often as you wish and see up to date statistics on how well your books are selling.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
