--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -71,5 +71,5 @@ h3 {
   font-size: 15px; font-style: normal; font-weight: normal; line-height: 20px;}
 #welcome-info img { margin: 10px 0 0 10px; } 
 
-#welcome-video { background-color: #F2F2F2; border: 1px solid #E4E4E4; padding: 20px 20px 20px 20px; }
+#welcome-video { background-color: #F2F2F2; border: 1px solid #E4E4E4; padding: 20px 20px 20px 20px; margin: 0 0 20px 0; }
 #welcome-video-img { width: 420px; height: 252px; }
