--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="row">
-        <div id="welcome-line">&nbsp;</div>
+        <div class="nice-line">&nbsp;</div>
       </div>
       <div class="row" id="welcome-info">
         <div class="span6">
@@ -140,6 +140,25 @@
               Login to our site as often as you wish and see up to date statistics on how well your books are selling.
               </p>
             </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="nice-line">&nbsp;</div>
+      </div>
+      <div class="row">
+        <div class="span1">
+          &nbsp;
+        </div>
+        <div class="span11">
+          <div class="big-quote">
+            "Producing my book through MagicBooks has been nothing short of a miracle.
+            I had an idea for a book.  A book I really wanted to read to my son.  Now, not only is he reading my book,
+            all his friends are too."
+          </div>
+          <div class="quote-name">
+            - Nathan Pringle
           </div>
         </div>
       </div>
