--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,7 +65,7 @@ h3 {
 #welcome-signup .btn-large { display: block; font-size: 18px; }
 #welcome-signup p { margin: 10px 0 0 0; text-align: center; color: #777; }
 
-#welcome-line { border-bottom: 1px solid #CECECE; margin: 10px 0 20px 0; }
+.nice-line { border-bottom: 1px solid #CECECE; margin: 10px 0 30px 0; }
 
 #welcome-info p { color: #454545; font-family: 'Droid Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 15px; font-style: normal; font-weight: normal; line-height: 20px;}
@@ -73,3 +73,19 @@ h3 {
 
 #welcome-video { background-color: #F2F2F2; border: 1px solid #E4E4E4; padding: 20px 20px 20px 20px; margin: 0 0 20px 0; }
 #welcome-video-img { width: 420px; height: 252px; }
+
+.big-quote {
+  color: #333;
+  display: block;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 35px;
+}
+
+.quote-name {
+  color: #777;
+  font-size: 16px;
+  margin: 5px 0 0 0;
+}
