--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -162,6 +162,28 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="span12">
+          <div class="alert alert-info">
+            <div id="welcome-alert">
+              <a href="#" class="btn btn-large">Take a tour</a>
+              <a href="#" class="btn btn-large">Check out pricing</a>
+              <a href="#" class="btn btn-large">Sign up for free</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="footer1">
+      <div class="container">
+        top footer
+      </div>
+    </div>
+    <div id="footer2">
+      <div class="container">
+        lower footer
+      </div>
     </div>
 
   </body>
