--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
-    <div class="container">
+    <div class="container nav-container">
       <a class="brand" href="#">MagicBooks</a>
       <a class="btn btn-primary" href="#contact">Login</a>
 
