--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,16 +1,23 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
-    <div class="container nav-container">
-      <a class="brand" href="#">MagicBooks</a>
-      <a class="btn btn-primary" href="#contact">Login</a>
+    <div class="container">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
 
-      <ul class="nav pull-right">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">Tour</a></li>
-        <li><a href="#contact">Pricing & Sign Up</a></li>
-        <li><a href="#contact">Why MagicBooks?</a></li>
-        <li><a href="#contact">About</a></li>
-      </ul>
+      <a class="brand" href="#">MagicBooks</a>
+
+      <div class="nav-collapse">
+        <ul class="nav pull-right">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/">Tour</a></li>
+          <li><a href="/">Pricing & Sign Up</a></li>
+          <li><a href="/">Why MagicBooks?</a></li>
+          <li><a href="/">About</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
