--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -22,7 +22,7 @@
         </div>
         <div class="span3">
           <div id="welcome-signup">
-            <a href="#" class="btn btn-large btn-success">Sign Up for Free</a>
+            <a href="/" class="btn btn-large btn-success">Sign Up for Free</a>
             <p> No fees to get started! </p>
           </div>
         </div>
@@ -166,9 +166,9 @@
         <div class="span12">
           <div class="alert alert-info">
             <div id="welcome-alert">
-              <a href="#" class="btn btn-large">Take a tour</a>
-              <a href="#" class="btn btn-large">Check out pricing</a>
-              <a href="#" class="btn btn-large">Sign up for free</a>
+              <a href="/" class="btn btn-large">Take a tour</a>
+              <a href="/" class="btn btn-large">Check out pricing</a>
+              <a href="/" class="btn btn-large">Sign up for free</a>
             </div>
           </div>
         </div>
