--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -63,7 +63,7 @@
           </div>
           <div class="row">
             <div class="span1">
-              <img src="/assets/money-icon.png"/>
+              <img src="/assets/amazon.jpg"/>
             </div>
             <div class="span5">
               <h3>Sell Your Book on Amazon</h3>
@@ -80,7 +80,7 @@
               <img src="/assets/facebook.jpg"/>
             </div>
             <div class="span5">
-              <h3>Use Your Social Network</h3>
+              <h3>Integrated with Your Social Network</h3>
               <p>
               Our customers are amazed at how well social networking sites help promote their books.
               </p>
