--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,6 +40,10 @@ li {
   margin: 0 0 30px 0;
 }
 
+#splash img {
+  margin: 10px 0 0 0;
+}
+
 #footer1 {
   background-color: #252525;
   height: 150px;
