--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -11,6 +11,7 @@
     <div id="splash">
       <div class="container">
         <h1>Create Your Own Children's Books</h1>
+        <img src="/assets/welcome.png" />
       </div>
     </div>
 
