--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
       </a>
 
-      <a class="brand" href="#">MagicBooks</a>
+      <a class="brand" href="/">MagicBooks</a>
 
       <div class="nav-collapse">
         <ul class="nav pull-right">
