--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -108,7 +108,7 @@
         <div class="span6">
           <div id="welcome-video">
             <div id="welcome-video-img">
-              &nbsp;
+              <img src="/assets/video.png"/>
             </div>
             <p>
             Watch the 2-minute video explaining MagicBooks
