--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -10,170 +10,12 @@
 
     <div id="splash">
       <div class="container">
-        <h1>Create Your Own Children's Books</h1>
-        <img src="/assets/welcome.png" />
+        <%= yield :splash %>
       </div>
     </div>
 
     <div class="container">
-      <div class="row">
-        <div class="span9">
-          <h2>Artists compete to win your project.  You describe the pictures you need
-            illustrated and watch the magic!</h2>
-        </div>
-        <div class="span3">
-          <div id="welcome-signup">
-            <a href="/" class="btn btn-large btn-success">Sign Up for Free</a>
-            <p> No fees to get started! </p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="nice-line">&nbsp;</div>
-      </div>
-      <div class="row" id="welcome-info">
-        <div class="span6">
-          <div class="row">
-            <div class="span1">
-              <img src="/assets/art-icon.png"/>
-            </div>
-            <div class="span5">
-              <h3>Post Detailed Artwork Instructions</h3>
-              <p>
-              MagicBooks artists love what they do.  They have a burning desire to
-              express themselves through drawings</p>
-              <p>
-              Go ahead and describe exactly what you want drawn, they will make it happen!
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span1">
-              <img src="/assets/document-icon.gif"/>
-            </div>
-            <div class="span5">
-              <h3>Multiple Artists Compete for You</h3>
-              <p>
-              Similar to popular logo creation sites, many different artists will give you
-              their take on your book.
-              </p>
-              <p>
-              If you don't like the first one, no problem, you'll have many choices.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span1">
-              <img src="/assets/amazon.jpg"/>
-            </div>
-            <div class="span5">
-              <h3>Sell Your Book on Amazon</h3>
-              <p>
-              If you have a hit book you can make money.  Not all books are hits, but you never know!
-              </p>
-              <p>
-              We make it simple to get your idea turned into a real product you can try and sell.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span1">
-              <img src="/assets/facebook.jpg"/>
-            </div>
-            <div class="span5">
-              <h3>Integrated with Your Social Network</h3>
-              <p>
-              Our customers are amazed at how well social networking sites help promote their books.
-              </p>
-              <p>
-              Your friends and family will love reading your book to their kids!
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span1">
-              <img src="/assets/quality.gif"/>
-            </div>
-            <div class="span5">
-              <h3>Full Color Quality Printing</h3>
-              <p>
-              Children's Books are different from other books.  You need lots of printing options.
-              </p>
-              <p>
-              Quality Printing on thick cardboard paper, never-tear paper, and more.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="span6">
-          <div id="welcome-video">
-            <div id="welcome-video-img">
-              <img src="/assets/video.png"/>
-            </div>
-            <p>
-            Watch the 2-minute video explaining MagicBooks
-            </p>
-          </div>
-          <div class="row">
-            <div class="span1">
-              <img src="/assets/legal.png"/>
-            </div>
-            <div class="span5">
-              <h3>Legal Profit Sharing Contracts</h3>
-              <p>
-              To attract the best artists you can offer to share the book's profits.
-              </p>
-              <p>
-              We offer the legal service to enter into these contracts with artists.
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="span1">
-              <img src="/assets/stats.gif"/>
-            </div>
-            <div class="span5">
-              <h3>Accurate Tracking of Stats</h3>
-              <p>
-              We keep a close eye on how well your books are doing!
-              </p>
-              <p>
-              Login to our site as often as you wish and see up to date statistics on how well your books are selling.
-              </p>
-            </div>
-          </div>
-
-        </div>
-      </div>
-      <div class="row">
-        <div class="nice-line">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="span1">
-          &nbsp;
-        </div>
-        <div class="span11">
-          <div class="big-quote">
-            "Producing my book through MagicBooks has been nothing short of a miracle.
-            I had an idea for a book.  A book I really wanted to read to my son.  Now, not only is he reading my book,
-            all his friends are too."
-          </div>
-          <div class="quote-name">
-            - Nathan Pringle
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="span12">
-          <div class="alert alert-info">
-            <div id="welcome-alert">
-              <a href="/" class="btn btn-large">Take a tour</a>
-              <a href="/" class="btn btn-large">Check out pricing</a>
-              <a href="/" class="btn btn-large">Sign up for free</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <%= yield :main %>
     </div>
 
     <div id="footer1">
