--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -20,12 +20,12 @@
 
     <div id="footer1">
       <div class="container">
-        top footer
+        this is a mocked up website to illustrate the idea for a company like magicbooks
       </div>
     </div>
     <div id="footer2">
       <div class="container">
-        lower footer
+        you can reach the author by emailing oneone at gmail dot com
       </div>
     </div>
 
