--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -155,7 +155,7 @@
     <div class="span12">
       <div class="alert alert-info">
         <div id="welcome-alert">
-          <a href="/" class="btn btn-large">Take a tour</a>
+          <a href="/tour" class="btn btn-large">Take a tour</a>
           <a href="/" class="btn btn-large">Check out pricing</a>
           <a href="/" class="btn btn-large">Sign up for free</a>
         </div>
