--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,10 +34,10 @@ li {
 
 #splash {
   background-color: #ECECEC;
-  height: 400px;
   border-bottom: 1px solid #DADADA;
   text-align: center;
   margin: 0 0 30px 0;
+  padding: 0 0 20px 0;
 }
 
 #splash img {
