--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,23 +1,15 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
 
       <a class="brand" href="/">MagicBooks</a>
-
-      <div class="nav-collapse">
-        <ul class="nav pull-right">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/">Tour</a></li>
-          <li><a href="/">Pricing & Sign Up</a></li>
-          <li><a href="/">Why MagicBooks?</a></li>
-          <li><a href="/">About</a></li>
-        </ul>
-      </div>
+      <ul class="nav pull-right">
+        <li class="<%= request.env['PATH_INFO'] == '/' ? 'active' : '' %>"><a href="/">Home</a></li>
+        <li class="<%= request.env['PATH_INFO'] == '/tour' ? 'active' : '' %>"><a href="/tour">Tour</a></li>
+        <li class="<%= request.env['PATH_INFO'] == '#' ? 'active' : '' %>"><a href="/">Pricing & Sign Up</a></li>
+        <li class="<%= request.env['PATH_INFO'] == '#' ? 'active' : '' %>"><a href="/">Why MagicBooks?</a></li>
+        <li class="<%= request.env['PATH_INFO'] == '#' ? 'active' : '' %>"><a href="/">About</a></li>
+      </ul>
     </div>
   </div>
 </div>
